--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
@@ -74,7 +74,7 @@ abstract          : |
  With our paradigm, we were able to determine subjective values. 
  The trait character of the values will be discussed.
 keywords          : "emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography"
-wordcount         : "about 9000"
+wordcount         : "9432"
 bibliography      : ["ER_ED.bib"]
 floatsintext      : yes
 figsintext        : yes
