--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -155,7 +155,7 @@
     {}{\InnerPatchFailed}%
   }
 {}{\PatchFailed}
-\keywords{emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography\newline\indent Word count: about 9000}
+\keywords{emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography\newline\indent Word count: 9432}
 \usepackage{lineno}
 
 \linenumbers
@@ -613,7 +613,7 @@ For detailed information on post-hoc contrasts, please see Tables \ref{tab:Suppl
 \begin{lltable}
 
 \begin{longtable}{rccccc}\noalign{\getlongtablewidth\global\LTcapwidth=\longtablewidth}
-\caption{\label{tab:TabDescr}$M \pm SD$ of subjective arousal, subjetive effort, subjective utility, Corrugator activity, and Levator activity for each condition.}\\
+\caption{\label{tab:TabDescr}$M \pm SD$ of subjective arousal, subjetive effort, subjective utility, corrugator activity, and levator activity for each condition.}\\
 \toprule
  & \multicolumn{1}{c}{Subjective Arousal} & \multicolumn{1}{c}{Subjective Effort} & \multicolumn{1}{c}{Subjective Utility} & \multicolumn{1}{c}{Corrugator activity (in mV)} & \multicolumn{1}{c}{Levator activity (in mV)}\\
 \midrule
@@ -746,7 +746,7 @@ The third model followed the specification:
 SV \sim \text{effort rating} + \text{utility rating} + corrugator \text{ activity} \\\ + \text{self-control} + \text{NFC} + (1 |subject)
 \end{split}
 \]
-As expected, the predictors effort rating (\(\hat{\beta} = -0.001\), 95\% CI \([-0.001, -0.001]\), \(t(5,620.93) = -14.26\), \(p < .001\)) showed a negative association with SVs, while utility rating (\(\hat{\beta} = 0.001\), 95\% CI \([0.001, 0.002]\), \(t(5,620.93) = 33.28\), \(p < .001\)), and \emph{Corrugator} activity (\(\hat{\beta} = 0.008\), 95\% CI \([0.001, 0.015]\), \(t(5,620.93) = 2.12\), \(p = .034\)) showed a significant positive association with SVs.
+As expected, the predictors effort rating (\(\hat{\beta} = -0.001\), 95\% CI \([-0.001, -0.001]\), \(t(5,620.93) = -14.26\), \(p < .001\)) showed a negative association with SVs, while utility rating (\(\hat{\beta} = 0.001\), 95\% CI \([0.001, 0.002]\), \(t(5,620.93) = 33.28\), \(p < .001\)), and \emph{corrugator} activity (\(\hat{\beta} = 0.008\), 95\% CI \([0.001, 0.015]\), \(t(5,620.93) = 2.12\), \(p = .034\)) showed a significant positive association with SVs.
 In addition, a positive association was also found between self-control and SVs (\(\hat{\beta} = 0.024\), 95\% CI \([0.001, 0.048]\), \(t(97.97) = 2.04\), \(p = .044\)).
 However, the effect size of self-control was negligibly small (\(f^{2}=\) 0.002).
 Detailed information can be found in the \protect\hyperlink{SupplementExploratory}{supplementary material}.
@@ -757,23 +757,21 @@ Detailed information can be found in the \protect\hyperlink{SupplementExplorator
 The present Registered Report was designed to assess whether our new Cognitive and Affective Discounting (CAD) paradigm is suitable for determining individual subjective values of the ER strategies distraction, distancing, and suppression.
 We adapted Westbrook et al.'s\textsuperscript{29} Cognitive Effort Discounting paradigm in a way that allows SVs to be determined for tasks without objective difficulty order.
 The new paradigm was tested on an \emph{n}-back task\textsuperscript{34} and a classic ER paradigm.
-The latter was goal of the present study and completed by \(N=120\) participants.
+The latter was the goal of the present study and completed by \(N=120\) participants.
 As expected, the use of ER strategies was associated with reduced subjective and physiological arousal.
 This finding is in line with previous meta-analytic findings indicating the effectiveness of ER strategies, both on subjective as well as physiological levels\textsuperscript{4,5}.
 Furthermore, we found higher levels of subjective cognitive effort for all ER strategies compared to active viewing.
 This allows us to replicate previous findings from our research group and show that strategy use is associated with cognitive effort\textsuperscript{22}.
 Both measures also showed high variability between individuals.
 Taken together, this means that the ER strategies had the intended effect on the participants: Individuals were able to effectively reduce subjective and physiological responding at the expense of cognitive effort.
-We believe that there was a good basis on which individual SVs of ER strategies could be determined.
-Overall, there was evidence to support hypotheses H1 to H5.
 It was nevertheless surprising that the strategy suppression showed on average and descriptively the lowest \emph{corrugator} activity, the lowest effort ratings and the highest utility ratings.
-In the case of the EEG measurement, this could be due to the fact that the result of the implementation of the instructions (``Maintain a neutral facial expression'') is measured directly.
-This also indicates why the required effort is the lowest.
-The direct instruction to implement the strategy reduces the complexity of the generation process.
-By comparison, distancing increases the complexity, for example, because it requires a distanced reappraisal of the stimulus.
-Ultimately, these two aspects are expressed in terms of greater utility: The implementation of the instructions requires comparatively less effort.
+In the case of the EMG measurement, this could be due to the fact that the result of the implementation of the instructions (``Maintain a neutral facial expression'') is measured directly.
+The direct instruction also reduces the complexity of the generation process, which is why the required effort is the lowest.
+By comparison, distancing increases the complexity, because it requires an impersonal reappraisal of the stimulus.
+Ultimately, the immediacy and simplicity are then expressed in terms of greater subjective utility of the strategy.
 In addition, one receives relatively direct feedback from one's own facial muscle activity as to how well the strategy suppression has been implemented.
-In the case of the strategies distraction and distancing, a more detailed evaluation of internal states must take place in order to assess the utility of the strategies.
+In the case of the strategies distraction and distancing, a more detailed evaluation of internal states must take place in order to assess their utility, which again requires more effort.
+Since the manipulation checks were successful, the subjective and physiological measures were likely to be meaningful in influencing the individual SVs.
 
 Almost all participants showed an absolute preference for a particular strategy, indicated by an SV of 1.
 We also found a wide range of SVs (between 0.005 and 1.00), suggesting that individuals have varying degrees of strategy preference.
@@ -781,13 +779,13 @@ There was a significant relationship between SVs and strategy choice.
 Overly frequent, persons chose the strategy for which the highest subjective value had been determined before, supporting hypothesis H7.
 We also found associations between individual SVs and various predictors.
 Subjective effort, utility, and \emph{corrugator} muscle activity significantly predicted individual SVs.
-Contrary to our hypothesis H6, utility was the best predictor for individual SVs, explaining 15.5\% of variance in SVs.
-However, individual SVs did not show associations with self-reported ER flexibility, we therefore found no evidence for hypothesis H7.
-In a subsequent exploratory analyses, we found associations between individual SVs and self-control.
-This is consistant with the literature, which has already reported correlations between self-control and demand avoidance\textsuperscript{69}.
+Contrary to our hypothesis H6, utility and not effort was the best predictor for individual SVs, explaining 15.5\% of variance in SVs.
+However, since individual SVs did not show associations with self-reported ER flexibility, we found no evidence for hypothesis H7.
+In a subsequent exploratory analyses, we found a positive association between individual SVs and self-control.
+This is consistent with the literature, which has already reported correlations between self-control and demand avoidance\textsuperscript{69}.
 However, we did not find an association between NFC and SVs.
 This is in contrast to the literature, which has reported correlations between NFC, effort discounting and demand avoidance\textsuperscript{29,34}.
-However, these were all cognitive tasks. The role of NFC in affective tasks is not yet known.
+However, these were all cognitive tasks. The role of NFC in affective tasks is not well known yet.
 
 \hypertarget{ecological-validity-of-subjective-values-of-er-strategies}{%
 \subsection{Ecological validity of subjective values of ER strategies}\label{ecological-validity-of-subjective-values-of-er-strategies}}
@@ -807,7 +805,7 @@ With regard to the EMG measures, this could be because all the pictures we used 
 However, \emph{corrugator} activity did not differ significantly between ER strategies, but was still associated with SVs.
 One possible reason for this could be that muscle activity provides direct feedback on the effectiveness of the current strategy, much more direct than, for example, the subjective arousal rating at the end of each experimental block.
 Furthermore, the finding that effort is associated with SVs confirms previous research by our group showing that individuals strive to minimise effort when choosing ER strategies\textsuperscript{22}.
-Finally, the subjective utility ratings showed the greatest explanation for the variance in the SVs.
+Finally, the subjective utility ratings showed the greatest explained variance in the SVs.
 This relationship is highly plausible as it involves individuals assessing the utility of the strategy as a means of achieving external and internal regulatory goals.
 This is likely to overlap with subjective values - some literature argues that utility and subjective values are the same thing\textsuperscript{75}.
 However, this is contradicted by our data, as subjective utility could only explain 15.5\% of the variance in SVs.
@@ -815,11 +813,11 @@ However, this is contradicted by our data, as subjective utility could only expl
 The highest SVs of the individuals were associated with the choice made by the participants in the last experimental block.
 So far, it has been difficult to transfer such findings from the laboratory to everyday life\textsuperscript{72}.
 This may be because in laboratory studies the choice options are often predetermined by the experimental design\textsuperscript{20--22}.
-Therefore, attempts have been made to investigate ER choice and influencing factors in everyday life in previous studies.
-Even there, however, certain strategies were often prescribed (for example studies, see English et al.\textsuperscript{76}, Millgram et al.\textsuperscript{77}, Wilms et al.\textsuperscript{72}), although covering a large part of the process of emotion generation\textsuperscript{2}.
+Therefore, attempts have been made to investigate ER choice and its influencing factors in everyday life in previous studies.
+Even there, however, certain strategies were often prescribed (for example studies see English et al.\textsuperscript{76}, Millgram et al.\textsuperscript{77}, Wilms et al.\textsuperscript{72}), although covering a large part of the process of emotion generation\textsuperscript{2}.
 Of course, the calculation of SVs in our new CAD paradigm is similarly tied to the strategies with which the strategy of interest is compared.
 To allow all strategies in the ER repertoire to be recorded for each individual, a study might use ecological momentary assessment\textsuperscript{12,78}.
-This would also capture strategies that are rarely used or even considered maladaptive, such as alcohol consumption or rumination\textsuperscript{79}.
+This would also capture strategies that are rarely used or are even considered maladaptive, such as alcohol consumption or rumination\textsuperscript{79}.
 
 In order to gain a more comprehensive picture of ER, dynamic or cyclic processes have to be considered.
 The extended process model of emotion regulation\textsuperscript{33} postulates three sequential stages, namely identification, selection, and implementation, to achieve a given goal in a situation.
@@ -828,8 +826,8 @@ Importantly, the information about the success of implementing an ER strategy in
 This means that studies on ER Choice should consider not only situational factors, but also contextual factors\textsuperscript{81}.
 For example, in a classic ER choice paradigm\textsuperscript{21}, Murphy and Young\textsuperscript{81} showed that strategy choice was significantly influenced by strategy choice and negative affect in the previous trial.
 This provides empirical evidence that experience gained during use of ER strategies influences future choice of ER strategies.
-Our newly developed paradigm also makes an important contribution here.
-The information and experiences that participants gain while using the strategies in the experimental task might be implicitly incorporated into the subsequent calculation of subjective values.
+Our newly developed CAD paradigm also makes an important contribution here.
+The information and experiences that participants gain while using the strategies in the experimental task might be implicitly incorporated into the subsequent calculation of SVs.
 That is, the participants first apply all the strategies and then make the monetary decisions while expecting that they should repeat the strategies again.
 This raises the question of how stable these individual SVs are.
 
@@ -842,16 +840,16 @@ To establish the \emph{trait} nature of a measure, one could for instance resort
 The individual SVs calculated in our CAD paradigm were assessed in the laboratory in a single situation.
 By definition, this represents a state.
 As noted above, personal regulatory goals, situational factors, and contextual demands influence the choice for or against ER strategies\textsuperscript{21}.
-We belief that these goals, factors, and demands also influence individual SVs of ER strategies.
+We believe that these goals, factors, and demands also influence individual SVs of ER strategies.
 Our data presented in this study support this idea.
-However, this also implies that SVs should differ according to situational factors (e.g., stimulus intensity).
+However, this also implies that SVs should differ according to situational factors (e.g.~stimulus intensity).
 The ER goals that individuals pursue in a given situation must also be taken into account.
 In our laboratory setting, participants mainly pursue prohedonic goals, but certainly not social goals\textsuperscript{85}.
 Wilms and colleagues\textsuperscript{72} pointed out that ER goals, as well as situational factors, should be treated as states, because both vary greatly from event to event and situation to situation.
 In a different situation, for example outside the laboratory, where an individual is primarily pursuing a social goal, a different strategy might appear more helpful and thus have a higher SV.
 It should also be noted that the calculation of individual SVs in our CAD paradigm always refers to the alternative strategies that were available to the individuals (see also \protect\hyperlink{Limitations}{Limitations}).
 Therefore, SVs may vary when different reference strategies are used.
-It is conceivable that subjective values are likely to be highly correlated in situations with similar demands and goals.
+It is conceivable that SVs are likely to be highly correlated in situations with similar demands and goals.
 They would thus reflect habits or habitual use of ER strategies, which has already been attempted to capture by means of questionnaires\textsuperscript{9}.
 Of course, it is also possible that such habits influence the internal formation of these subjective values.
 However, our data are not suitable for answering this question.
@@ -872,18 +870,16 @@ Furthermore, we were able to confirm that the implementation of ER strategies wa
 Still, these features of our research design may have led to slightly lower associations between SVs and predictors.
 
 Third, a major limitation is that participants had to use three prescribed ER strategies.
-It may be that some of the participants were not used to any of these strategies in everyday life.
-So it could be that none of the strategies has a really high subjective value for the person.
+It may be that some of the participants were not used to any of these strategies in everyday life, so none of the strategies actually had a high subjective value for them.
 However, the strategies selected for attentional deployment, cognitive change, and response modulation have been shown meta-analytically to be most effective\textsuperscript{4}.
 In this context, the individual SVs of each person must be interpreted with caution.
 They depend on the specific context: The stimuli presented and the strategies compared.
 For example, SVs for an ER strategy might be higher or lower when different stimuli or stimulus valences and different comparison strategies are used, because the calculation of SVs is inseparable form the other SVs.
 
-Fourth, the highest value during the discounting paradigm was set to 2 € as fixed value.
+Fourth, the highest value during the discounting paradigm was set to 2€ as fixed value.
 Participants were asked to imagine that this was the amount of money they would receive if they repeated this strategy.
-Thus, 2 € could be quite low as an incentive to repeat an whole experimental block of emotion regulation.
-However, we chose this amount because, firstly, we have followed the original paradigm of Westbrook\textsuperscript{29}.
-Secondly, it has been shown that, at least in the case of cognitive effort discounting, a lower incentive might even increase participants' sensitivity to effort differences\textsuperscript{90}.
+Thus, 2€ could be quite low as an incentive to repeat an whole experimental block of emotion regulation.
+However, we chose this amount because, firstly, we followed the original paradigm of Westbrook\textsuperscript{29}, and secondly, it has been shown in the context of cognitive effort discounting, that a lower incentive increases participants' sensitivity to effort differences\textsuperscript{90}.
 In the future, however, it should be investigated how the level of incentives affects subjective values.
 
 \hypertarget{conclusion}{%
@@ -894,7 +890,7 @@ The strategy that is most suitable for coping with contextual demands and achiev
 The combination of influencing factors should be reflected in subjective values that are formed for all alternatives and serve as a basis for decision-making.
 To date, such subjective values have not been established for ER strategies.
 Our proposed CAD paradigm contributes to research on ER Choice and ER Flexibility by allowing quantification of these values.
-This further enables to investigate in more detail the factors influencing the internal generation of these subjective values of ER strategies.
+This further enables to investigate the factors influencing the internal generation of these subjective values of ER strategies in more detail.
 It appears that the subjective value attributed to a strategy is primarily determined by perceived usefulness and effort.
 Finally, further research is needed to investigate the factors that influence subjective values and whether these values represent habitual use of ER strategies by individuals.
 
