--- a/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Supplement.Rmd
@@ -1,12 +1,101 @@
 ---
-title: "Supplement"
-author: "Christoph Scheffel"
-date: "2023-02-16"
-output: html_document
+title             : "Supplementary Material for the Registered Report: Estimating individual subjective values of emotion regulation strategies"
+shorttitle        : "Supplementary Material"
+author:
+  - name          : "Christoph Scheffel"
+    orcid         : "0000-0001-5963-9229"
+    affiliation   : "1"
+    corresponding : yes
+    address       : "Zellescher Weg 17, 01069 Dresden, Germany"
+    email         : "christoph_scheffel@tu-dresden.de"
+    equal_contrib : yes
+    role          :         # Contributorship roles (e.g., CRediT, https://casrai.org/credit/)
+      - Conceptualization
+      - Methodology
+      - Funding acquisition
+      - Formal analysis
+      - Investigation
+      - Project administration
+      - Software
+      - Visualization
+      - Writing - original draft preparation
+      - Writing - review & editing
+  - name          : "Josephine Zerna"
+    orcid         : "0000-0003-2892-884X"
+    affiliation   : "1"
+    equal_contrib : yes
+    role          :
+      - Conceptualization
+      - Methodology
+      - Funding acquisition
+      - Investigation
+      - Project administration
+      - Software
+      - Visualization
+      - Writing - review & editing
+  - name          : "Anne Gärtner"
+    orcid         : "0000-0003-4296-963X"
+    affiliation   : "1"
+    role          :
+      - Formal analysis
+      - Writing - review & editing
+  - name          : "Denise Dörfel"
+    orcid         : "0000-0002-5632-419X"
+    affiliation   : "1,2"
+    role          :
+      - Conceptualization
+      - Writing - review & editing
+  - name          : "Alexander Strobel"
+    orcid         : "0000-0002-9426-5397"
+    affiliation   : "1"
+    role          :
+      - Conceptualization
+      - Methodology
+      - Writing - review & editing 
+affiliation       :
+  - id            : "1"
+    institution   : "Chair of Differential and Personality Psychology, Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany"
+  - id            : "2"
+    institution   : "Center for Information Services and High Performance Computing, Technische Universität Dresden, 01069 Dresden, Germany"
+authornote        :
+keywords          : "emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography"
+wordcount         : "9432"
+bibliography      : ["ER_ED.bib"]
+floatsintext      : yes
+figsintext        : yes
+figurelist        : no
+tablelist         : no
+footnotelist      : no
+linenumbers       : yes
+mask              : no
+draft             : no
+documentclass     : "apa6"
+classoption       : "man"
+output            : papaja::apa6_pdf
+csl               : nature.csl
+header-includes   :
+    - \usepackage{booktabs}
+    - \usepackage{longtable}
+    - \usepackage{array}
+    - \usepackage{multirow}
+    - \usepackage{wrapfig}
+    - \usepackage{float}
+    - \usepackage{colortbl}
+    - \usepackage{pdflscape}
+    - \usepackage{tabu}
+    - \usepackage{threeparttable}
+    - \usepackage{threeparttablex}
+    - \usepackage[normalem]{ulem}
+    - \usepackage{makecell}
+    - \usepackage{xcolor}
+    - \usepackage{setspace}\doublespacing
+    - \usepackage[final]{pdfpages}
+    - \usepackage{chngcntr}
 ---
 
 ```{r SetupSupplement, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(out.width = "\\textwidth")
 
 library(here)       # to set directories without defined paths
 # set top level directory to source file
@@ -21,9 +110,16 @@ base::load(here("06_Paper","ER-ED","ERED_Stage2","Workspace_ERED.RData"))
 options(papaja.na_string = "")
 ```
 
-# Supplementary Material {#SupplementaryMaterial}
+## Design Table {#DesignTable}
+
+\includepdf[pages={-}, landscape=true]{Supplement/Design_Table_T2.pdf}
+\newpage
+
+## Stimuli used in ER paradigm
 
 \includepdf[pages={-}, landscape=true]{Supplement/StimList_Suppl.pdf}
+
+\renewcommand\thesection{\Alph{section}}
 \counterwithin{figure}{section}
 \counterwithin{table}{section}
 \setcounter{section}{19}
